kubernetes/config/ingresses/django-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-clusterissuer
    kubernetes.io/ingress.global-static-ip-name: django-ip
    kubernetes.io/tls-acme: "true"
  name: django-ingress
  namespace: default
spec:
  backend:
    serviceName: django-app-service
    servicePort: 80
  tls:
  - secretName: ssl-certificates
status:
  loadBalancer:
    ingress:
    - ip: xxx.xxx.xxx.xxx
